--- a/ui/reknote.ui
+++ b/ui/reknote.ui
@@ -10,23 +10,15 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>9</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>120</x>
-      <y>450</y>
-      <width>95</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>iinsert</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
@@ -61,8 +53,20 @@
     <property name="childrenCollapsible">
      <bool>true</bool>
     </property>
-    <widget class="QTreeView" name="treeView"/>
-    <widget class="NoteView" name="listView"/>
+    <widget class="QTreeView" name="spikestreeview">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+    </widget>
+    <widget class="NoteView" name="listView">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+    </widget>
    </widget>
    <widget class="QPushButton" name="savebutton">
     <property name="geometry">
@@ -124,7 +128,40 @@
     </rect>
    </property>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionAddSpike"/>
+   <addaction name="actionDeleteSpike"/>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionAddSpike">
+   <property name="icon">
+    <iconset theme="document-new">
+     <normaloff/>
+    </iconset>
+   </property>
+   <property name="text">
+    <string>Add Spike</string>
+   </property>
+  </action>
+  <action name="actionDeleteSpike">
+   <property name="icon">
+    <iconset theme="edit-delete">
+     <normaloff/>
+    </iconset>
+   </property>
+   <property name="text">
+    <string>deleteSpike</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
