--- a/ui/reknote.ui
+++ b/ui/reknote.ui
@@ -19,19 +19,6 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>400</y>
-      <width>321</width>
-      <height>141</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
@@ -66,7 +53,7 @@
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="NoteView" name="listView">
+    <widget class="NoteView" name="noteView">
      <property name="font">
       <font>
        <pointsize>12</pointsize>
@@ -85,55 +72,6 @@
       <bool>false</bool>
      </property>
     </widget>
-   </widget>
-   <widget class="QPushButton" name="savebutton">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>490</y>
-      <width>95</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>savetmp</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="loadbutton">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>490</y>
-      <width>95</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>load</string>
-    </property>
-   </widget>
-   <widget class="QListView" name="blistview">
-    <property name="geometry">
-     <rect>
-      <x>380</x>
-      <y>410</y>
-      <width>256</width>
-      <height>192</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="deleteb">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>450</y>
-      <width>95</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>delete</string>
-    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
