--- a/ui/reknote.ui
+++ b/ui/reknote.ui
@@ -79,7 +79,7 @@
         <enum>Qt::ElideNone</enum>
        </property>
        <property name="isWrapping" stdset="0">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="wordWrap">
         <bool>false</bool>
@@ -151,7 +151,9 @@
   </action>
   <action name="actionCleanDone">
    <property name="icon">
-    <iconset theme="user-trash"/>
+    <iconset theme="user-trash">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Clean Done</string>
