--- a/ui/history.ui
+++ b/ui/history.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>638</width>
+    <height>373</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,6 +36,16 @@
      <y>10</y>
      <width>256</width>
      <height>271</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTextEdit" name="textEdit">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>20</y>
+     <width>291</width>
+     <height>221</height>
     </rect>
    </property>
   </widget>
