--- a/ui/history.ui
+++ b/ui/history.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>638</width>
-    <height>373</height>
+    <height>399</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>240</y>
+     <y>300</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -39,14 +39,31 @@
     </rect>
    </property>
   </widget>
-  <widget class="QTextEdit" name="textEdit">
+  <widget class="QTreeView" name="spikestreeview">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>20</y>
-     <width>291</width>
-     <height>221</height>
+     <x>290</x>
+     <y>0</y>
+     <width>339</width>
+     <height>281</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="dragDropMode">
+    <enum>QAbstractItemView::DragDrop</enum>
+   </property>
+   <property name="defaultDropAction">
+    <enum>Qt::MoveAction</enum>
+   </property>
+   <property name="textElideMode">
+    <enum>Qt::ElideNone</enum>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
