--- a/ui/reknote.ui
+++ b/ui/reknote.ui
@@ -25,73 +25,7 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QSplitter" name="splitter">
-      <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="handleWidth">
-       <number>3</number>
-      </property>
-      <property name="childrenCollapsible">
-       <bool>true</bool>
-      </property>
-      <widget class="QTreeView" name="spikestreeview">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="dragDropMode">
-        <enum>QAbstractItemView::DragDrop</enum>
-       </property>
-       <property name="defaultDropAction">
-        <enum>Qt::MoveAction</enum>
-       </property>
-       <property name="textElideMode">
-        <enum>Qt::ElideNone</enum>
-       </property>
-       <property name="wordWrap">
-        <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="NoteView" name="noteView">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="acceptDrops">
-        <bool>true</bool>
-       </property>
-       <property name="frameShadow">
-        <enum>QFrame::Sunken</enum>
-       </property>
-       <property name="dragEnabled">
-        <bool>true</bool>
-       </property>
-       <property name="dragDropOverwriteMode">
-        <bool>false</bool>
-       </property>
-       <property name="dragDropMode">
-        <enum>QAbstractItemView::DragDrop</enum>
-       </property>
-       <property name="defaultDropAction">
-        <enum>Qt::MoveAction</enum>
-       </property>
-       <property name="textElideMode">
-        <enum>Qt::ElideNone</enum>
-       </property>
-       <property name="isWrapping" stdset="0">
-        <bool>false</bool>
-       </property>
-       <property name="wordWrap">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </widget>
+     <widget class="SpikeNoteWidget" name="spikenotewidget" native="true"/>
     </item>
    </layout>
   </widget>
@@ -101,7 +35,7 @@
      <x>0</x>
      <y>0</y>
      <width>698</width>
-     <height>29</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
@@ -199,9 +133,10 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>NoteView</class>
-   <extends>QListView</extends>
-   <header>src/noteview.h</header>
+   <class>SpikeNoteWidget</class>
+   <extends>QWidget</extends>
+   <header>src/spikenotewidget.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources>
