--- a/ui/history.ui
+++ b/ui/history.ui
@@ -16,10 +16,10 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>300</y>
-     <width>341</width>
-     <height>32</height>
+     <x>6</x>
+     <y>360</y>
+     <width>84</width>
+     <height>33</height>
     </rect>
    </property>
    <property name="orientation">
@@ -32,44 +32,32 @@
   <widget class="QListWidget" name="dateList">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>10</y>
+     <x>6</x>
+     <y>6</y>
      <width>256</width>
-     <height>271</height>
+     <height>192</height>
     </rect>
    </property>
   </widget>
-  <widget class="QTreeView" name="spikestreeview">
+  <widget class="SpikeNoteWidget" name="spikenotewidget" native="true">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>0</y>
-     <width>339</width>
-     <height>281</height>
+     <x>267</x>
+     <y>6</y>
+     <width>371</width>
+     <height>348</height>
     </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="dragEnabled">
-    <bool>false</bool>
-   </property>
-   <property name="dragDropMode">
-    <enum>QAbstractItemView::NoDragDrop</enum>
-   </property>
-   <property name="defaultDropAction">
-    <enum>Qt::MoveAction</enum>
-   </property>
-   <property name="textElideMode">
-    <enum>Qt::ElideNone</enum>
-   </property>
-   <property name="wordWrap">
-    <bool>true</bool>
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>SpikeNoteWidget</class>
+   <extends>QWidget</extends>
+   <header>src/spikenotewidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
