--- a/ui/spikenotewidget.ui
+++ b/ui/spikenotewidget.ui
@@ -49,6 +49,9 @@
     <property name="wordWrap">
      <bool>true</bool>
     </property>
+    <attribute name="headerVisible">
+     <bool>true</bool>
+    </attribute>
    </widget>
    <widget class="NoteView" name="noteView">
     <property name="font">
